# ai-trading

./: main.py  pyproject.toml  research.ipynb  xgboost_model.json
